# todoos

./: .clang-format  .gitignore  .zsh_todoos_sync  CHANGELOG.md  CMakeLists.txt  Makefile  README.md  build.sh  main.cpp  runtests.sh
Linux/Zsh/: README  README.md  _todoos  zsh_todoos  zsh_todoos_aliases  zsh_todoos_sync
Linux/sync/: unison.md
benchmark/: .gitignore  benchmark.go  testMemory.md
src/: version.h.in
src/Actions/Config/: Config.h
src/CLIAutocomplete/: CLIAutocompleteService.cpp  CLIAutocompleteService.h
src/CLIController/: CLIController.cpp  CLIController.h
src/CLIThemes/: CLIThemeService.cpp  CLIThemeService.h  DefaultTheme.cpp  DefaultTheme.h  LightTheme.cpp  LightTheme.h  MobileTheme.cpp  MobileTheme.h  ThemeAbstract.cpp  ThemeAbstract.h
src/Command/: Command.cpp  Command.h  CommandList.cpp  CommandList.h  CommandOption.cpp  CommandOption.h  CommandRegistry.cpp  CommandRegistry.h  CommandRouter.cpp  CommandRouter.h  CommandService.cpp  CommandService.h  CommandShortcut.cpp  CommandShortcut.h  CommandValidation.cpp  CommandValidation.h  SmartCommand.cpp  SmartCommand.h
src/CommandRouter/: CommandRouter.cpp  CommandRouter.h
src/Config/: ConfigEntity.cpp  ConfigService.cpp  ConfigService.h
src/Describe/: DescribeItem.cpp  DescribeItem.h  DescribeItemEdited.cpp  DescribeItemEdited.h
src/Entities/: ConfigEntity.cpp  ConfigEntity.h  ListEntity.cpp  ListEntity.h  ListItemEntity.cpp  ListItemEntity.h  PriorityEntity.cpp  PriorityEntity.h  StatusEntity.cpp  StatusEntity.h
src/Events/: Event.cpp  Event.h  EventBus.cpp  EventBus.h
src/Exception/: ListNotFoundException.cpp  ListNotFoundException.h
src/FileDataStorage/: CSVService.cpp  CSVService.h  ConfService.cpp  ConfService.h  FileDataServiceInterface.h  JSONService.cpp  JSONService.h
src/FileDataStorageRepositories/: ConfigRepository.cpp  ConfigRepository.h  DescriptionRepository.cpp  DescriptionRepository.h  ListItemRepository.cpp  ListItemRepository.h  ListRepository.cpp  ListRepository.h
src/FileStorage/: FileStorageService.cpp  FileStorageService.h
src/Help/: Help.cpp  Help.h  HelpPrinter.cpp  HelpPrinter.h
src/Helpers/: BashStyle.cpp  BashStyle.h  DateHelpers.cpp  DateHelpers.h  StringHelpers.cpp  StringHelpers.h  TerminalStyle.cpp  TerminalStyle.h
src/IOService/: IOService.cpp  IOService.h
src/Init/: AppInitialization.cpp  AppInitialization.h  AppInitializationInterface.h  AppInstallation.cpp  AppInstallation.h  AppInstallationInterface.h  Init.cpp  Init.h  InitInterface.h  Installation.cpp  Installation.h  InstallationInterface.h
src/List/: ListCountSummary.h  ListItemService.cpp  ListItemService.h  ListName.cpp  ListName.h  ListService.cpp  ListService.h
src/Serializers/: ConfSerializer.cpp  ConfSerializer.h  CsvSerializer.cpp  CsvSerializer.h  DataSerializerInterface.h  JsonSerializer.cpp  JsonSerializer.h
src/Tests/: CMakeLists.txt  TestMain.cpp
src/Tests/Actions/: ActionsTest.cpp  CommandRouterTest.cpp  ConfigTest.cpp  ItemActionsTest.cpp  ListActionTest.cpp  ListActionsTest.cpp  MoveTest.cpp  ShowTest.cpp  StatsTest.cpp
src/Tests/CLIAutocomplete/: CLIAutocompleteServiceTest.cpp
src/Tests/CLIController/: CLIControllerTest.cpp
src/Tests/Command/: CommandListTest.cpp  CommandOptionTest.cpp  CommandRegistryTest.cpp  CommandRouterTest.cpp  CommandServiceTest.cpp  CommandShortcutServiceTest.cpp  CommandTest.cpp  CommandValidationTest.cpp  SmartCommandTest.cpp
src/Tests/CommandAutocomplete/: CommandAutocompleteServiceTest.cpp
src/Tests/Config/: ConfigEntityTest.cpp  ConfigRepositoryTest.cpp  ConfigServiceTest.cpp
src/Tests/Describe/: DescribeItemEditedTest.cpp  DescribeItemTest.cpp  DescriptionRepositoryTest.cpp
src/Tests/Entities/: ConfigEntityTest.cpp  ListEntityTest.cpp  ListItemEntitiyTest.cpp  PriorityEntityTest.cpp  StatusEntityTest.cpp
src/Tests/Events/: EventTest.cpp
src/Tests/Exception/: ListNotFoundExceptionTest.cpp
src/Tests/FileDataStorage/: CSVServiceTest.cpp  ConfServiceTest.cpp  JSONServiceTest.cpp
src/Tests/FileStorage/: FileStorageTest.cpp
src/Tests/Help/: HelpPrinterTest.cpp  HelpTest.cpp
src/Tests/Helpers/: BashStyleTest.cpp  HelpersTest.cpp  TerminalStyleTest.cpp
src/Tests/IOService/: IOServiceTest.cpp
src/Tests/Init/: AppInstallationTest.cpp  InstallationTest.cpp
src/Tests/List/: ListCountSummaryTest.cpp  ListEntityTest.cpp  ListItemRepositoryTest.cpp  ListItemServiceCountSummaryTest.cpp  ListItemServiceTest.cpp  ListNameTest.cpp  ListRepositoryTest.cpp  ListServiceTest.cpp
src/Tests/List/ListItems/: ListItemEntityTest.cpp  PriorityEntityTest.cpp  StatusEntityTest.cpp
src/Tests/Mock/: MockAppInitialization.cpp  MockAppInitialization.h  MockAppInstallation.cpp  MockAppInstallation.h  MockInit.cpp  MockInit.h  MockInstallation.cpp  MockInstallation.h
src/Tests/Serializers/: ConfSerializerTest.cpp  CsvSerializerTest.cpp  JsonSerializerTest.cpp
src/Tests/Themes/: DefaultTest.cpp  ThemeAbstractTest.cpp  ThemeServiceTest.cpp  ThemeTest.cpp
src/Tests/UseCase/: MissingUseCaseTest.cpp  UseCaseTest.cpp
src/Themes/: DefaultTheme.cpp  DefaultTheme.h  MobileTheme.cpp  MobileTheme.h  Theme.cpp  Theme.h  ThemeAbstract.cpp  ThemeAbstract.h  ThemeInterface.h  ThemeService.cpp  ThemeService.h
src/UseCase/: AddItemUseCase.cpp  AddItemUseCase.h  AddListUseCase.cpp  AddListUseCase.h  AppendItemUseCase.cpp  AppendItemUseCase.h  ArchiveUseCase.cpp  ArchiveUseCase.h  CleanUseCase.cpp  CleanUseCase.h  CommandAutoCompleteUseCase.cpp  CommandAutoCompleteUseCase.h  CopyItemUseCase.cpp  CopyItemUseCase.h  CopyListUseCase.cpp  CopyListUseCase.h  CurrentListUseCase.cpp  CurrentListUseCase.h  DeadlineItemUseCase.cpp  DeadlineItemUseCase.h  DescribeItemUseCase.cpp  DescribeItemUseCase.h  DuplicateItemUseCase.cpp  DuplicateItemUseCase.h  EditItemUseCase.cpp  EditItemUseCase.h  EmptyUseCase.cpp  EmptyUseCase.h  FindUseCase.cpp  FindUseCase.h  ListItemActionsUseCase.cpp  ListItemActionsUseCase.h  ListUseCase.cpp  ListUseCase.h  MoveItemUseCase.cpp  MoveItemUseCase.h  MoveListUseCase.cpp  MoveListUseCase.h  MoveUseCase.cpp  MoveUseCase.h  (+26 more)
(+103 files in other folders)
