cmake_minimum_required(VERSION 3.28)
set(CMAKE_CXX_STANDARD 23)
find_package(Catch2 3 REQUIRED)

include(FetchContent)
FetchContent_Declare(json URL https://github.com/nlohmann/json/releases/download/v3.11.3/json.tar.xz)
FetchContent_MakeAvailable(json)

add_executable(TestsRun Helpers/HelpersTest.cpp
        IOService/IOServiceTest.cpp
        ../Helpers/DateHelpers.cpp
        ../Helpers/StringHelpers.cpp
        ../Helpers/BashStyle.cpp
        ../Help/Help.cpp
        ../IOService/IOService.cpp
        ../IOService/IOCliService/IOCliService.cpp
        ../Exception/ListNotFoundException.cpp
        ../Config/ConfigEntity.cpp
        ../List/ListEntity.cpp
        ../List/ListItems/ListItemEntity.cpp
        ../List/ListItems/PriorityEntity.cpp
        ../List/ListItems/StatusEntity.cpp
        ../FileDataStorage/ConfService.cpp
        ../FileDataStorage/JSONService.cpp
        ../FileDataStorage/CSVService.cpp
        ../FileStorage/FileStorageService.cpp
        ../Command/Command.cpp
        ../Command/CommandList.cpp
        ../Command/CommandOption.cpp
        ../Command/CommandValidation.cpp
        ../Command/CommandService.cpp
        ../Command/SmartCommand.cpp
        ../Command/CommandShortcut.cpp
        ../UseCase/CommandAutoCompleteUseCase.cpp
        ../List/ListItems/PriorityService.cpp
        ../List/ListItems/StatusService.cpp
        ../List/ListService.cpp
        ../List/ListName.cpp
        ../List/ListItemService.cpp
        ../List/ListItems/PriorityService.cpp
        ../List/ListItems/StatusService.cpp
        ../Config/ConfigService.cpp
        ../FileDataStorageRepositories/ConfigRepository.cpp
        ../FileDataStorageRepositories/ListRepository.cpp
        ../FileDataStorageRepositories/ListItemRepository.cpp
        ../Events/Event.cpp
        ../Events/Event.h
        ../Events/EventBus.cpp
        ../Events/EventBus.h
        ../Init/InstallationInterface.h
        Help/HelpTest.cpp
        FileDataStorage/JSONServiceTest.cpp
        FileDataStorage/CSVServiceTest.cpp
        Config/ConfigEntityTest.cpp
        List/ListItems/ListItemEntityTest.cpp
        List/ListEntityTest.cpp
        Command/CommandTest.cpp
        Command/CommandListTest.cpp
        Command/CommandValidationTest.cpp
        Command/CommandServiceTest.cpp
        Command/SmartCommandTest.cpp
        Command/CommandShortcutServiceTest.cpp
        CLIAutocomplete/CLIAutocompleteServiceTest.cpp
        Mock/MockInstallation.cpp
        Mock/MockInstallation.h
        Mock/MockInit.cpp
        Mock/MockInit.h
        Config/ConfigRepositoryTest.cpp
        List/ListRepositoryTest.cpp
        List/ListItemServiceTest.cpp
        List/ListServiceTest.cpp
        List/ListNameTest.cpp
        List/ListItemRepositoryTest.cpp
        Init/InstallationTest.cpp
        FileDataStorage/ConfServiceTest.cpp
        FileStorage/FileStorageTest.cpp
        Command/CommandOptionTest.cpp
        Events/EventTest.cpp
        List/ListItems/StatusEntityTest.cpp
        List/ListItems/PriorityEntityTest.cpp
        Helpers/BashStyleTest.cpp
        Exception/ListNotFoundExceptionTest.cpp
        Config/ConfigServiceTest.cpp
        CLIController/CLIControllerTest.cpp
        ../Actions/Remove/Remove.cpp
        ../Actions/Status/Status.cpp
        ../Actions/Priority/Priority.cpp
        ../Actions/ListItemActions/ListItemActions.cpp
        ../Actions/Show/Show.cpp
        ../Actions/Config/Config.cpp
        ../Actions/ListActions/ListActions.cpp
        ../Actions/Move/Move.cpp
        ../Actions/Stats/Stats.cpp
        ../CLIThemes/CLIThemeService.cpp
        ../CLIThemes/ThemeAbstract.cpp
        ../CLIThemes/DefaultTheme.cpp
        ../CLIThemes/MobileTheme.cpp
        ../FileStorage/FileStorageService.cpp
        ../UseCase/ShowUseCase.cpp
        ../UseCase/ListItemActionsUseCase.cpp
        ../UseCase/FindUseCase.cpp
        ../UseCase/PriorityUseCase.cpp
        ../UseCase/ResetUseCase.cpp
        ../UseCase/StatusUseCase.cpp
        ../UseCase/RemoveUseCase.cpp
        ../UseCase/ArchiveUseCase.cpp
        ../UseCase/RestoreUseCase.cpp
        ../UseCase/ListUseCase.cpp
        ../UseCase/SwitchListUseCase.cpp
        ../UseCase/StatsUseCase.cpp
        ../UseCase/MoveUseCase.cpp
        ../UseCase/EmptyUseCase.cpp
        ../UseCase/CleanUseCase.cpp
        UseCase/UseCaseTest.cpp
        TestMain.cpp
)

target_link_libraries(TestsRun PRIVATE nlohmann_json::nlohmann_json)
target_link_libraries(TestsRun PRIVATE Catch2::Catch2WithMain)

include(Catch)
catch_discover_tests(TestsRun)
